# duckling

./: .env.local.example  .gitignore  AGENTS.md  Brewfile  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  duckling.gemspec  hk.pkl  todo.md
.claude/: settings.json
.github/: dependabot.yml
.github/scripts/: apply-tag-ruleset.sh
.github/workflows/: benchmark-branch.yml  benchmark-pr50.yml  benchmark.yml  cross-gem.yml  docs-to-wiki.yml  main.yml  promote-wiki.yml  release.yml
benchmark/: parse_benchmark.rb  report.rb
docs/: 2026-07-01-roadmap.md  issue-32-serde-magnus-comparison.md
docs/1-ship-duckling-gem-time-extraction-via-magnus-wafer/: README.md
docs/benchmarks/: README.md  (+2 more)
ext/duckling/: Cargo.toml  extconf.rb
ext/duckling/src/: lib.rs  ruby_value.rs
lib/: duckling.rb
test/: benchmark_report_test.rb  duckling_ci_test.rb  duckling_comma_list_test.rb  duckling_gc_stress_test.rb  duckling_instant_grain_dst_limitation_test.rb  duckling_parse_dimensions_test.rb  duckling_parse_latent_test.rb  duckling_parse_locale_test.rb  duckling_parse_time_basic_test.rb  duckling_parse_time_dates_test.rb  duckling_parse_time_interval_test.rb  duckling_parse_time_relative_test.rb  duckling_parse_time_weekdays_test.rb  duckling_reference_time_zone_mismatch_test.rb  duckling_reference_zone_dst_gap_test.rb  duckling_reference_zone_dst_transition_test.rb  duckling_reference_zone_instant_test.rb  duckling_reference_zone_interval_test.rb  duckling_reference_zone_mismatch_test.rb  duckling_reference_zone_omitted_test.rb  duckling_reference_zone_unrecognized_shape_test.rb  duckling_reference_zone_without_reference_time_test.rb  duckling_test.rb  duckling_time_test.rb  falcon_fiber_blocking_test.rb  native_panic_test.rb  parse_error_stderr_test.rb  test_duckling.rb  test_helper.rb  test_hill_api_layer.rb  test_hill_ci_layer.rb  test_hill_entity_shape_layer.rb  test_hill_parity_layer.rb  test_hill_time_extraction_layer.rb  test_hill_version_layer.rb  thread_pool_dispatch_test.rb  wiki_migrator_edgecases_test.rb  wiki_migrator_test.rb
wiki/: migrator.rb
(+89 files in other folders)
