[package]
name = "duckling"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["chrono"] }
duckling = "0.4"
chrono = "0.4"
serde = "1"
serde_magnus = "0.11"
rb-sys = { version = "*", default-features = false, features = ["stable-api-compiled-fallback"] }
